Refactoring client and api
