# src/main/kotlin/com/kemp/api/ResourcesRoutes.kt
@@ -10,28 +10,29 @@ import io.ktor.server.routing.*
 
 fun Route.resources() {
 
-    route("/api/cluster/{clusterName}") {
+    route("/{cluster}") {
         route("/{resource}/{resourceName?}") {
             get {
                 val namespace = call.request.queryParameters["namespace"]
-                val name = call.parameters["resourceName"]
-                val resources = call.parameters["clusterName"]?.let { cluster ->
+                val resourceName = call.parameters["resourceName"]
+                val resources = call.parameters["cluster"]?.let { cluster ->
                     call.parameters["resource"]?.let { resource ->
-                        if (name.isNullOrEmpty()) {
+                        if (resourceName.isNullOrEmpty()) {
                             KubeManager.getClient(cluster).listResources(resource, namespace)?.asStringJsonList()
                         } else {
-                            KubeManager.getClient(cluster).getResource(name, resource, namespace)?.asStringJson()
+                            KubeManager.getClient(cluster).getResource(resource, resourceName, namespace)
+                                ?.asStringJson()
                         }
                     }
                 }
                 call.respondText(resources ?: "", ContentType.Application.Json)
             }
             delete {
-                val queryNamespace = call.request.queryParameters["namespace"]
-                val resource = call.parameters["clusterName"]?.let { cluster ->
+                val namespace = call.request.queryParameters["namespace"]
+                val resource = call.parameters["cluster"]?.let { cluster ->
                     call.parameters["resource"]?.let { resource ->
                         call.parameters["resourceName"]?.let { resourceName ->
-                            KubeManager.getClient(cluster).deleteResource(resourceName, resource, queryNamespace)
+                            KubeManager.getClient(cluster).deleteResource(resource, resourceName, namespace)
                         }
                     }
                 }
